@@ -1,3 +1,7 @@
+2005-05-15  Erik Hjortsberg  <erik@katastrof.nu>
+
+	* src/components/ogre/Makefile.am: removed obsolete files
+
 2005-05-12  Erik Hjortsberg  <erik@katastrof.nu>
 
 	* src/components/ogre/DebugListener.cpp, src/components/ogre/DebugListener.h, src/components/ogre/EntityListener.cpp,src/components/ogre/OgreMain.diff, src/components/ogre/OgreTerrainSceneManager.h.diff, src/components/ogre/terrain.cfg:
